Github pages debugging

--- a/apache-bright-official/package.json
+++ b/apache-bright-official/package.json
@@ -14,7 +14,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "homepage": "https://mikebrady0.github.io/Apache-Bright-Official/",
+    "homepage": "./",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "test": "react-scripts test",
