--- a/apache-bright-official/package.json
+++ b/apache-bright-official/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://mikebrady0.github.io/Apache-Bright-Official/",
   "name": "apache-bright-official",
   "version": "0.1.0",
   "private": false,
@@ -14,7 +15,6 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "homepage": "https://mikebrady0.github.io/Apache-Bright-Official/",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "test": "react-scripts test",
@@ -37,5 +37,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.2.0"
   }
 }
