--- a/apache-bright-official/package.json
+++ b/apache-bright-official/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://mikebrady0.github.io/Apache-Bright-Official/",
+  "homepage": "https://apachebrightdetailing.com/",
   "name": "apache-bright-official",
   "version": "0.1.0",
   "private": false,
